<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    custom:cardBackgroundColor="#DEE9E4"
    custom:cardCornerRadius="5dp"
    custom:cardElevation="5dp"
    custom:contentPadding="0dp"
    android:layout_marginTop="15px"
    android:layout_marginBottom="15px"
    android:layout_marginLeft="35px"
    android:layout_marginRight="35px"
    >
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_card_date"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_date"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/textblack"
            android:padding="15px"
            />
        <TextView
            android:id="@+id/tv_card_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_total"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/textblack"
            android:padding="15px"
            />
        <TextView
            android:id="@+id/tv_card_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_right"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/textblack"
            android:padding="15px"
            />
        <TextView
            android:id="@+id/tv_card_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_error"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/textblack"
            android:padding="15px"
            />
        <TextView
            android:id="@+id/tv_card_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_time"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/textblack"
            android:padding="15px"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_id_onpic"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pass_on"
        />
</android.support.v7.widget.CardView>