<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/nwsuaf.com.exam"
    android:orientation="vertical"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="@null"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/contentwhite"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:contentPadding="0dp"
    >
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/tv_id_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_uid"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle_white"
            />
        <EditText
            android:id="@+id/tv_id_passwd"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_passwd"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rectangle_white"
            />
        <nwsuaf.com.exam.customview.RippleView
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/rp_id_login"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:text="@string/errorproblem"
            android:background="@drawable/card_bk"
            app:alphaFactor="0.3"
            app:mrippleColor="@color/bohegreen"
            app:hover="true"
            >
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/main_text_size"
                android:text="@string/login"
                />
        </nwsuaf.com.exam.customview.RippleView>
    </LinearLayout>


</android.support.v7.widget.CardView>
