<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_bk"
    >
    <TextView
        android:layout_centerVertical="true"
        android:id="@+id/tv_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:drawableLeft="@drawable/studentstate"
        android:text="张三"/>
    <LinearLayout
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_student_id"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stustate_id"
            />
        <TextView
            android:id="@+id/tv_student_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stustate_join"
            />
        <TextView
            android:id="@+id/tv_student_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stustate_submit"
            />
    </LinearLayout>
</RelativeLayout>