<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="110px"
              android:background="@color/white"
              android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/bottom_id_tab1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bottom_id_pic1"
            android:layout_width="60px"
            android:layout_height="60px"
            android:src="@drawable/bottom_pic1_clicked"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/bottom_id_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomtab_name1"
            android:textColor="@color/mainblue"
            android:textSize="@dimen/main_text_size"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_id_tab2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bottom_id_pic2"
            android:layout_width="60px"
            android:layout_height="60px"
            android:scaleType="centerCrop"
            android:src="@drawable/bottom_pic2"
            />

        <TextView
            android:id="@+id/bottom_id_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomtab_name2"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/shallowblack"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_id_tab3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/bottom_id_pic3"
            android:layout_width="60px"
            android:layout_height="60px"
            android:scaleType="centerCrop"
            android:src="@drawable/bottom_pic3"
            />

        <TextView
            android:id="@+id/bottom_id_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomtab_name3"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/shallowblack" />
    </LinearLayout>

</LinearLayout>