<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcy_piclist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/rcy_piclist"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_lightblack_pointline"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                android:text="根据以上几张图片，识别该物种是："
                />
            <EditText
                android:id="@+id/et_ke"
                android:background="@drawable/rectangle_white"
                android:hint="@string/ke"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_shu"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_white"
                android:hint="@string/shu"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:singleLine="true"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_zhong"
                android:layout_marginTop="10dp"
                android:background="@drawable/rectangle_white"
                android:hint="@string/zhong"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:singleLine="true"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>