<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/nwsuaf.com.exam"
    android:id="@+id/activity_teacher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/top"/>
    <nwsuaf.com.exam.customview.RippleView
        android:layout_marginTop="20px"
        android:id="@+id/rp_id_createclass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errorproblem"
        android:background="@drawable/card_bk"
        app:alphaFactor="0.7"
        app:mrippleColor="#58FAAC"
        app:hover="true"
        >
        <ImageView
            android:id="@+id/iv_id_createclass"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50px"
            android:src="@drawable/create_class"/>
        <TextView
            android:layout_toRightOf="@+id/iv_id_createclass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addclass"
            android:textColor="@color/textblack"
            android:textSize="@dimen/main_text_size"
            android:padding="60px"/>
        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50px"
            android:src="@drawable/right"/>
    </nwsuaf.com.exam.customview.RippleView>
    <nwsuaf.com.exam.customview.RippleView
        android:layout_marginTop="20px"
        android:id="@+id/rp_id_myclass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errorproblem"
        android:background="@drawable/card_bk"
        app:alphaFactor="0.7"
        app:mrippleColor="#58FAAC"
        app:hover="true"
        >
        <ImageView
            android:id="@+id/iv_id_myclass"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50px"
            android:src="@drawable/myclass"/>
        <TextView
            android:layout_toRightOf="@+id/iv_id_myclass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myclass_teacher"
            android:textColor="@color/textblack"
            android:textSize="@dimen/main_text_size"
            android:padding="60px"/>
        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50px"
            android:src="@drawable/right"/>
    </nwsuaf.com.exam.customview.RippleView>
</LinearLayout>
