<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/contentblack"
              android:orientation="vertical"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/rl_id_examtype"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:background="@color/bohegreen"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_id_special"
                    android:layout_centerHorizontal="true"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_marginTop="20px"
                    android:src="@drawable/pic1"/>

                <TextView
                    android:layout_below="@+id/iv_id_special"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_margin="10px"
                    android:textStyle="bold"
                    android:textColor="@color/contentwhite"
                    android:textSize="@dimen/main_text_size"
                    android:text="@string/special"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_id_mineexam"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:background="@color/contentwhite"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/iv_id_mineexam"
                    android:layout_centerHorizontal="true"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_marginTop="20px"
                    android:src="@drawable/exam_light"/>

                <TextView
                    android:layout_below="@+id/iv_id_mineexam"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_margin="10px"
                    android:textColor="@color/textblacklight"
                    android:textSize="@dimen/main_text_size"
                    android:text="@string/tv_mineexam"/>
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_gravity="center"
            android:src="@drawable/white_circle"
            />
        <TextView
            android:layout_width="50px"
            android:layout_height="50px"
            android:text="@string/tv_or"
            android:textColor="@color/contentwhite"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/green_circle"
            />
    </FrameLayout>
    <nwsuaf.com.exam.customview.RippleView
        android:layout_marginTop="20px"
        android:id="@+id/rp_id_errorlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errorproblem"
        android:background="@drawable/card_bk"
        app:alphaFactor="0.7"
        app:mrippleColor="#58FAAC"
        app:hover="true"
        >
        <ImageView
            android:id="@+id/iv_id_errorproblem"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50px"
            android:src="@drawable/errormine"/>
        <TextView
            android:layout_toRightOf="@+id/iv_id_errorproblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorproblem"
            android:textColor="@color/textblack"
            android:textSize="@dimen/main_text_size"
            android:padding="60px"/>
        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50px"
            android:src="@drawable/right"/>
    </nwsuaf.com.exam.customview.RippleView>
    <nwsuaf.com.exam.customview.RippleView
        android:layout_marginTop="20px"
        android:id="@+id/rp_id_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/errorproblem"
        android:background="@drawable/card_bk"
        app:alphaFactor="0.7"
        app:mrippleColor="#58FAAC"
        app:hover="true"
        >
        <ImageView
            android:id="@+id/iv_id_record"
            android:layout_width="80px"
            android:layout_height="80px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50px"
            android:src="@drawable/calender"/>
        <TextView
            android:layout_toRightOf="@+id/iv_id_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_record"
            android:textColor="@color/textblack"
            android:textSize="@dimen/main_text_size"
            android:padding="60px"/>
        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50px"
            android:src="@drawable/right"/>
    </nwsuaf.com.exam.customview.RippleView>
</LinearLayout>
